# NLPDedup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
src/nlp_dedup/: __init__.py  cli.py  deduper.py  types.py  utils.py
