[tool.poetry]
name = "nlp_dedup"
version = "0.1.1"
description = "Remove duplicates and near-duplicates from text corpora, no matter the scale."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Kenneth Enevoldsen <kennethcenevoldsen@gmail.com>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
datasketch = "^1.5.8"
more-itertools = "^9.0.0"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^2.5.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.17.0"
pdoc = "^7.1.1"
black = "^22.6.0"
isort = "^5.10.1"
readme-coverage-badger = ">=0.1.2,<1.0.0"

[tool.poetry.scripts]
dedup = "nlp_dedup.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/nlp_dedup',
    '-n 2',
]
xfail_strict = true
filterwarnings = ["ignore"]
log_cli_level = "info"
testpaths = ["tests", "src/nlp_dedup"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.ruff]
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
